plugins {
    id 'java-library'
    id 'com.gradleup.shadow' version '9.2.2'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.19'
    id 'checkstyle'
}

group = 'me.mapacheee'
version = '2.3.5'
description = 'ExtendedHorizons - Advanced view distance extension plugin'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenCentral()
    
    // PaperMC
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    
    // Sonatype
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    
    // PlaceholderAPI
    maven {
        name = 'placeholderapi'
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    
    // CodeMC
    maven {
        name = 'codemc-repo'
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
    maven {
        name = 'codemc-snapshots'
        url = 'https://repo.codemc.io/repository/maven-snapshots/'
    }

    // LuckPerms
    maven {
        name = 'luckperms'
        url = 'https://repo.luckperms.net/'
    }

    // EngineHub (WorldEdit)
    maven {
        url = 'https://maven.enginehub.org/repo/'
    }
}

dependencies {
    // Winter Framework
    api("com.thewinterframework:paper:1.0.4") {
        exclude group: 'io.papermc.paper', module: 'paper-api'
        exclude group: 'com.google.guava', module: 'guava'
        exclude group: 'com.google.code.gson', module: 'gson'
    }
    annotationProcessor("com.thewinterframework:paper:1.0.4")
    
    api('com.thewinterframework:configuration:1.0.2') {
        exclude group: 'io.papermc.paper', module: 'paper-api'
    }
    annotationProcessor('com.thewinterframework:configuration:1.0.2')
    
    // Winter Command
    api('com.thewinterframework:command:1.0.1') {
        exclude group: 'io.papermc.paper', module: 'paper-api'
        exclude group: 'org.incendo', module: 'cloud-paper'
        exclude group: 'org.incendo', module: 'cloud-annotations'
        exclude group: 'org.incendo', module: 'cloud-bukkit'
        exclude group: 'org.incendo', module: 'cloud-core'
    }
    annotationProcessor('com.thewinterframework:command:1.0.1')
    
    // Cloud Command Framework
    api('org.incendo:cloud-paper:2.0.0-beta.10')
    api('org.incendo:cloud-annotations:2.0.0')
    
    // Paper API
    paperweight.paperDevBundle("1.21.11-R0.1-SNAPSHOT")

    // PacketEvents
    compileOnly("com.github.retrooper:packetevents-spigot:2.11.2")

    // SQLite
    compileOnly("org.xerial:sqlite-jdbc:3.51.1.0")

    // PlaceholderAPI
    compileOnly("me.clip:placeholderapi:2.11.7")

    // LuckPerms API
    compileOnly("net.luckperms:api:5.4")

    // WorldEdit
    compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.3.0")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

shadowJar {
    minimize {
        exclude(dependency('com.thewinterframework:.*'))
        exclude(dependency('com.google.inject:.*'))
        exclude(dependency('com.thewinterframework:configuration:.*'))
        exclude(dependency('org.incendo:.*'))
    }
    
    relocate 'com.thewinterframework', 'me.mapacheee.extendedhorizons.libs.winter'
    relocate 'com.google.inject', 'me.mapacheee.extendedhorizons.libs.guice'
    relocate 'org.incendo', 'me.mapacheee.extendedhorizons.libs.cloud'

    relocate 'javax.inject', 'me.mapacheee.extendedhorizons.libs.inject'
    relocate 'aopalliance', 'me.mapacheee.extendedhorizons.libs.aopalliance'

    exclude 'org/checkerframework/**'
    exclude 'META-INF/maven/org.checkerframework/**'
    exclude 'com/google/errorprone/**'
    exclude 'com/google/j2objc/**'

    exclude 'META-INF/MANIFEST.MF'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/versions/**'
    exclude 'META-INF/maven/**'
    exclude 'META-INF/proguard/**'
    exclude 'META-INF/native-image/**'
    exclude 'module-info.class'
    exclude '**/module-info.class'
    exclude 'META-INF/*.kotlin_module'
    
    mergeServiceFiles()
    
    manifest {
        attributes(
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Multi-Release': 'false'
        )
    }

    archiveBaseName = 'ExtendedHorizons'
    archiveClassifier = ''
    archiveVersion = project.version

    configurations = [project.configurations.runtimeClasspath]
    
    preserveFileTimestamps = false
    reproducibleFileOrder = true
}

tasks.build {
    dependsOn shadowJar
}

processResources {
    filteringCharset = 'UTF-8'
    filesMatching('plugin.yml') {
        expand project.properties
    }
}

checkstyle {
    toolVersion = '10.12.5'
    configFile = file('checkstyle.xml')
    ignoreFailures = true
}
